# oidc-rock

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  index.yaml  test-client.html
.github/workflows/: publish-oci-image.yaml  release-charts.yaml
charts/oidc-rock/: Chart.yaml  values-example.yaml  values.yaml
charts/oidc-rock/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  service.yaml
src/: config.rs  crypto.rs  handlers.rs  lib.rs  main.rs  models.rs  storage.rs
tests/: integration_tests.rs
