[package]
name = "oidc-rock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
url = "2"
urlencoding = "2.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
